--- a/Team_Essay_2.Rmd
+++ b/Team_Essay_2.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Team_Essay_2"
-author: "Ariel Lutati"
+author: "Sahil, Ariel, Ilya, Lekha, Anthony, Trang"
 date: "3/6/2021"
 output: pdf_document
 ---
@@ -9,22 +9,51 @@ output: pdf_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## R Markdown
+## Introduction
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
 
-```{r cars}
-summary(cars)
+
+## Formula and Basics
+
+
+
+
+## Loading required R packages
+
+readxl: to read data from xl sheet
+tidyverse: for data manipulation and visualization
+
+```{r}
+library("readxl")
+library("tidyverse")
 ```
 
-## Including Plots
+## Examples of data
 
-You can also embed plots, for example:
 
-```{r pressure, echo=FALSE}
-plot(pressure)
-```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+## Building model
+
+
+
+## Interpretation
+
+
+
+## Model accuracy assessment
+
+
+
+## Read also
+
+
+
+## Discussion
+
+
+
+
+## References
+
+
