--- a/Team_Essay_2.Rmd
+++ b/Team_Essay_2.Rmd
@@ -4,34 +4,34 @@ author: "Sahil, Ariel, Ilya, Lekha, Anthony, Trang"
 date: "3/6/2021"
 output: pdf_document
 ---
-
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
-```
-
 ## Introduction
-
-
-
 
 ## Formula and Basics
 
+## Loading Required R Packages
 
-
-
-## Loading required R packages
-
-readxl: to read data from xl sheet
-tidyverse: for data manipulation and visualization
+  + readxl - to read data from xl
+  + tidyverse - for data visualization and manipulation
+  + rlist - to compute rmse
 
 ```{r}
+library("tidyverse") 
 library("readxl")
-library("tidyverse")
+library("rlist")
 ```
 
-## Examples of data
+## Data Description
+
+## Visualization
+
+## Analysis
+
+## Computation
+
++ Height_Model: `height = b0 + b1*weight + b2*FGP + b3*FTP + b4*PPG`
+
 ```{r}
-bball_data <- read_excel("C:/Users/ariel/Desktop/TeamEssay2/Basketball.xlsx")
+bball_data <- read_excel("Basketball.xlsx")
 bball_data <- bball_data %>%
   rename(
     "height" = "X1",
@@ -40,81 +40,126 @@ bball_data <- bball_data %>%
     "FTP" = "X4",
     "PPG" = "X5"
   )
-head(basketball, 30)
-
-
-{r}
-FGP_Model <- lm(FGP ~ ., data = bball_data)
-#Summary of the model
-summary(FGP_Model)
-summary(FGP_Model)$coefficient
-
-#Confidence Interval of the model coefficients
-confint(FGP_Model)
-
-#Coefficient of determination
-summary(FGP_Model)$r.squared
-
-
-#RSE
-sigma(FGP_Model)/mean(bball_data$FGP)
-plot(FGP_Model)
-
-
-{r}
-FGP_Model2 <- lm(FGP ~ height + weight + PPG, data = bball_data)
-#Summary of the model
-summary(FGP_Model2)
-summary(FGP_Model2)$coefficient
-
-#Confidence Interval of the model coefficients
-confint(FGP_Model2)
-
-#Coefficient of determination
-summary(FGP_Model2)$r.squared
-
-
-#RSE
-sigma(FGP_Model2)/mean(bball_data$FGP)
-plot(FGP_Model2)
-
-{r}
-FGP_Model3 <- lm(FTP ~ height + weight, data = bball_data)
-#Summary of the model
-summary(FGP_Model3)
-summary(FGP_Model3)$coefficient
-
-#Confidence Interval of the model coefficients
-confint(FGP_Model3)
-
-#Coefficient of determination
-summary(FGP_Model3)$r.squared
-
-
-#RSE
-sigma(FGP_Model3)/mean(bball_data$FGP)
-
-plot(FGP_Model3)
+train_data = bball_data[1:30,]
+test_data = bball_data[31:52,]
 ```
 
-## Building model
+## Interpretation of the Model
 
 ```{r}
-model <- lm(AveragePointsScored ~ Height + Weight + GoalsPercentage + ThrowsPercentage, data = basketball)
-summary(model)
+Height_Model <- lm(height ~ ., data = bball_data)
+#Summary of the model
+summary(Height_Model)
+summary(Height_Model)$coefficient
+#Confidence Interval of the model coefficients
+confint(Height_Model)
+#Coefficient of determination
+summary(Height_Model)$r.squared
+#RSE
+sigma(Height_Model)/mean(bball_data$height)
+plot(Height_Model)
 ```
+From the output for above Height_Model:
+
+We can see that resulting regression equation is:
+
+  + `height = 3.798049837 + 0.011489032*weight + 1.138889566*FGP - 0.049315550*FTP - 0.008273347*PPG`
+  + b0 = 3.798049837
+  + b1 = 0.011489032
+  + b2 = 1.138889566
+  + b3 = 0.049315550
+  + b4 = -0.008273347
+
+We also observe that weight is the significant predictor.
+
+## Model Evaluation
+
+Training model
+
+```{r}
+train_model <-lm(height ~ ., data = train_data)
+train_pred <- predict(train_model, train_data)
+rmse(train_pred, train_data$height)
+res <- train_pred - train_data$height
+sum(res)
+plot(train_model)
+```
+
+  + The RMSE for training model is 0.2208217.
+  + The sum of residuals for training model is -1.865175e-14.
+
+Testing Model 
+
+```{r}
+test_model <-lm(height ~ ., data = test_data)
+test_pred <- predict(train_model, test_data)
+rmse(test_pred, test_data$height)
+res2 <- test_pred - test_data$height
+sum(res2)
+plot(test_model)
+```
+  + The RMSE for testing model is 0.2863395. (This is pretty good)
+  + The sum of residuals for testing model is 1.664502. (This could have been better)
+
+## Model Assessment
+
+```{r}
+summary(train_model)
+sigma(train_model)/mean(train_data$height)
+```
+We can see that our model has the following indicators:
+
+  + Residual standard error: 0.2419 on 25 degrees of freedom (The more it is closer to 1 the better)
+  + Multiple R-squared: 0.6355 (Higher the better)
+  + Adjusted R-squared: 0.5772 (Higher the better)
+  + F-statistic:  10.9 on 4 and 25 DF (Higher the better)
+  + p-value: 2.967e-05 (Lower the better)
+  + RSE: 0.03641216 (Lower the better)
 
 ## Interpretation
 
-```{r}
-confint(model)
-```
+Height_Model: `height = 3.798049837 + 0.011489032*weight + 1.138889566*FGP - 0.049315550*FTP - 0.008273347*PPG`
 
+  + We can say that height = 3.798049837, when all the other predictors are set to 0.
+  + In our model, it can be seen that p-value of the F-statistic is < 1.41e-05, which is highly significant. This means that, at         least, one of the predictor variables is significantly related to the outcome variable.
+  + To see which predictor variables are significant, you can examine the coefficients table, which shows the estimate of regression     beta coefficients and the associated t-statitic p-values:
+  
+```{r}
+summary(train_model)$coefficient
+```
+  
+  + For a given the predictor, the t-statistic evaluates whether or not there is significant association between the predictor and      the outcome variable, that is whether the beta coefficient of the predictor is significantly different from zero.
+  + It can be seen that, changing weight and PPG are significantly associated to changes in height while changes in FTP and FGP are     not significantly associated with height.
+  
+```{r}
+model2 <- lm(height ~ weight + PPG, data = bball_data)
+summary(model2)
+```
+Removing FTP and FGP we get the following:
+
+  + Residual standard error: 0.2563 on 51 degrees of freedom
+  + Multiple R-squared:  0.6998
+  + Adjusted R-squared:  0.688 
+  + F-statistic: 59.44 on 2 and 51 DF
+  + p-value: 4.728e-14
+  + There are few better changes but not as much as we expected.
 
 ## Model accuracy assessment
 
+Height_Model: `height = 3.798049837 + 0.011489032*weight + 1.138889566*FGP - 0.049315550*FTP - 0.008273347*PPG`
 
+1. weight = 225, FGP = 0.482, FTP = 0.701, PPG = 11.6
+  + Estimate of Height: 6.8
+  + Actual: 6.8
 
+2. weight = 215, FGP = 0.457, FTP = 0.734, PPG = 5.8
+  + Estimate of Height: 6.7
+  + Actual: 6.8
+  
+3. weight = 230, FGP = 0.435, FTP = 0.764, PPG = 8.3
+  + Estimate of Height: 6.82
+  + Actual: 7
+  
 ## Read also
 
 
