--- a/Team_Essay_2.Rmd
+++ b/Team_Essay_2.Rmd
@@ -4,15 +4,23 @@ author: "Sahil, Ariel, Ilya, Lekha, Anthony, Trang"
 date: "3/6/2021"
 output: pdf_document
 ---
+
 ## Introduction
 
 ## Formula and Basics
 
+Multiple linear regression: y = $\beta_0$ + $\beta_1x_1$ + $\beta_2x_2$ +...+$\beta_kx_k$ + $\epsilon$
+
+-   $\beta_0$ is value of y when all $x_k$ are equal to zero
+-   $\beta_k$ are beta coefficients which measure the correlation between the result and it's predictor variables
+-   $x_k$ are the independent variables
+-   $\epsilon$ is the error term, the part of y that can be explained through the regression model.
+
 ## Loading Required R Packages
 
-  + readxl - to read data from xl
-  + tidyverse - for data visualization and manipulation
-  + rlist - to compute rmse
+-   readxl - to read data from xl
+-   tidyverse - for data visualization and manipulation
+-   rlist - to compute rmse
 
 ```{r}
 library("tidyverse") 
@@ -22,13 +30,29 @@ library("rlist")
 
 ## Data Description
 
+Examples of Data and problem:
+
+```{r}
+bball_data <- read_excel("Basketball.xlsx")
+bball_data <- bball_data %>%
+  rename(
+    "height" = "X1",
+    "weight" = "X2",
+    "FGP" = "X3",
+    "FTP" = "X4",
+    "PPG" = "X5"
+  )
+full_data = bball_data[1:55,]
+bball_data
+```
+
 ## Visualization
 
 ## Analysis
 
 ## Computation
 
-+ Height_Model: `height = b0 + b1*weight + b2*FGP + b3*FTP + b4*PPG`
+-   Height_Model: `height = b0 + b1*weight + b2*FGP + b3*FTP + b4*PPG`
 
 ```{r}
 bball_data <- read_excel("Basketball.xlsx")
@@ -59,16 +83,17 @@ summary(Height_Model)$r.squared
 sigma(Height_Model)/mean(bball_data$height)
 plot(Height_Model)
 ```
+
 From the output for above Height_Model:
 
 We can see that resulting regression equation is:
 
-  + `height = 3.798049837 + 0.011489032*weight + 1.138889566*FGP - 0.049315550*FTP - 0.008273347*PPG`
-  + b0 = 3.798049837
-  + b1 = 0.011489032
-  + b2 = 1.138889566
-  + b3 = 0.049315550
-  + b4 = -0.008273347
+-   `height = 3.798049837 + 0.011489032*weight + 1.138889566*FGP - 0.049315550*FTP - 0.008273347*PPG`
+-   b0 = 3.798049837
+-   b1 = 0.011489032
+-   b2 = 1.138889566
+-   b3 = 0.049315550
+-   b4 = -0.008273347
 
 We also observe that weight is the significant predictor.
 
@@ -85,10 +110,10 @@ sum(res)
 plot(train_model)
 ```
 
-  + The RMSE for training model is 0.2208217.
-  + The sum of residuals for training model is -1.865175e-14.
+-   The RMSE for training model is 0.2208217.
+-   The sum of residuals for training model is -1.865175e-14.
 
-Testing Model 
+Testing Model
 
 ```{r}
 test_model <-lm(height ~ ., data = test_data)
@@ -98,8 +123,9 @@ res2 <- test_pred - test_data$height
 sum(res2)
 plot(test_model)
 ```
-  + The RMSE for testing model is 0.2863395. (This is pretty good)
-  + The sum of residuals for testing model is 1.664502. (This could have been better)
+
+-   The RMSE for testing model is 0.2863395. (This is pretty good)
+-   The sum of residuals for testing model is 1.664502. (This could have been better)
 
 ## Model Assessment
 
@@ -107,68 +133,66 @@ plot(test_model)
 summary(train_model)
 sigma(train_model)/mean(train_data$height)
 ```
+
 We can see that our model has the following indicators:
 
-  + Residual standard error: 0.2419 on 25 degrees of freedom (The more it is closer to 1 the better)
-  + Multiple R-squared: 0.6355 (Higher the better)
-  + Adjusted R-squared: 0.5772 (Higher the better)
-  + F-statistic:  10.9 on 4 and 25 DF (Higher the better)
-  + p-value: 2.967e-05 (Lower the better)
-  + RSE: 0.03641216 (Lower the better)
+-   Residual standard error: 0.2419 on 25 degrees of freedom (The more it is closer to 1 the better)
+-   Multiple R-squared: 0.6355 (Higher the better)
+-   Adjusted R-squared: 0.5772 (Higher the better)
+-   F-statistic: 10.9 on 4 and 25 DF (Higher the better)
+-   p-value: 2.967e-05 (Lower the better)
+-   RSE: 0.03641216 (Lower the better)
 
 ## Interpretation
 
 Height_Model: `height = 3.798049837 + 0.011489032*weight + 1.138889566*FGP - 0.049315550*FTP - 0.008273347*PPG`
 
-  + We can say that height = 3.798049837, when all the other predictors are set to 0.
-  + In our model, it can be seen that p-value of the F-statistic is < 1.41e-05, which is highly significant. This means that, at         least, one of the predictor variables is significantly related to the outcome variable.
-  + To see which predictor variables are significant, you can examine the coefficients table, which shows the estimate of regression     beta coefficients and the associated t-statitic p-values:
-  
+-   We can say that height = 3.798049837, when all the other predictors are set to 0.
+-   In our model, it can be seen that p-value of the F-statistic is \< 1.41e-05, which is highly significant. This means that, at least, one of the predictor variables is significantly related to the outcome variable.
+-   To see which predictor variables are significant, you can examine the coefficients table, which shows the estimate of regression beta coefficients and the associated t-statitic p-values:
+
 ```{r}
 summary(train_model)$coefficient
 ```
-  
-  + For a given the predictor, the t-statistic evaluates whether or not there is significant association between the predictor and      the outcome variable, that is whether the beta coefficient of the predictor is significantly different from zero.
-  + It can be seen that, changing weight and PPG are significantly associated to changes in height while changes in FTP and FGP are     not significantly associated with height.
-  
+
+-   For a given the predictor, the t-statistic evaluates whether or not there is significant association between the predictor and the outcome variable, that is whether the beta coefficient of the predictor is significantly different from zero.
+-   It can be seen that, changing weight and PPG are significantly associated to changes in height while changes in FTP and FGP are not significantly associated with height.
+
 ```{r}
 model2 <- lm(height ~ weight + PPG, data = bball_data)
 summary(model2)
 ```
+
 Removing FTP and FGP we get the following:
 
-  + Residual standard error: 0.2563 on 51 degrees of freedom
-  + Multiple R-squared:  0.6998
-  + Adjusted R-squared:  0.688 
-  + F-statistic: 59.44 on 2 and 51 DF
-  + p-value: 4.728e-14
-  + There are few better changes but not as much as we expected.
+-   Residual standard error: 0.2563 on 51 degrees of freedom
+-   Multiple R-squared: 0.6998
+-   Adjusted R-squared: 0.688
+-   F-statistic: 59.44 on 2 and 51 DF
+-   p-value: 4.728e-14
+-   There are few better changes but not as much as we expected.
 
 ## Model accuracy assessment
 
 Height_Model: `height = 3.798049837 + 0.011489032*weight + 1.138889566*FGP - 0.049315550*FTP - 0.008273347*PPG`
 
-1. weight = 225, FGP = 0.482, FTP = 0.701, PPG = 11.6
-  + Estimate of Height: 6.8
-  + Actual: 6.8
+1.  weight = 225, FGP = 0.482, FTP = 0.701, PPG = 11.6
 
-2. weight = 215, FGP = 0.457, FTP = 0.734, PPG = 5.8
-  + Estimate of Height: 6.7
-  + Actual: 6.8
-  
-3. weight = 230, FGP = 0.435, FTP = 0.764, PPG = 8.3
-  + Estimate of Height: 6.82
-  + Actual: 7
-  
+-   Estimate of Height: 6.8
+-   Actual: 6.8
+
+2.  weight = 215, FGP = 0.457, FTP = 0.734, PPG = 5.8
+
+-   Estimate of Height: 6.7
+-   Actual: 6.8
+
+3.  weight = 230, FGP = 0.435, FTP = 0.764, PPG = 8.3
+
+-   Estimate of Height: 6.82
+-   Actual: 7
+
 ## Read also
-
-
 
 ## Discussion
 
-
-
-
 ## References
-
-
